k8s/apps/repo-article/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repo-article
  namespace: apps
  labels:
    app: repo-article
    type: backends
    tags.datadoghq.com/env: prod
    tags.datadoghq.com/service: repo-article
    tags.datadoghq.com/version: v1.5.1
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  selector:
    matchLabels:
      app: repo-article
  template:
    metadata:
      labels:
        app: repo-article
        monitoring: "enabled"
        tags.datadoghq.com/env: prod
        tags.datadoghq.com/service: repo-article
        tags.datadoghq.com/version: v1.5.1
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1011
        runAsGroup: 2011
        fsGroup: 3011
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault

      imagePullSecrets:
        - name: pull-secret

      volumes:
        - name: apmsocketpath
          hostPath:
            path: /var/run/datadog/

      containers:
        - name: repo-article
          image: ghcr.io/therayquaza/newsbro/repo-article:repo-article-v1.5.1
          imagePullPolicy: IfNotPresent

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]

          volumeMounts:
            - name: apmsocketpath
              mountPath: /var/run/datadog

          ports:
            - containerPort: 8080
              name: http

          resources:
            requests:
              memory: "256Mi"
              cpu: "125m"
            limits:
              memory: "1Gi"
              cpu: "250m"

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
