k8s/apps/repo-article/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: repo-article-network-policy
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: repo-article
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from: # Allow public ingress
        - namespaceSelector:
            matchLabels:
              kubernetes.io/instance: ingress-nginx-public
      ports:
        - protocol: TCP
          port: 8080

    - from: # Allow probe
        - ipBlock:
            cidr: 10.42.0.0/16
      ports:
        - protocol: TCP
          port: 8080

  egress:
    - to:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: postgres-cluster
      ports:
        - protocol: TCP
          port: 5432

    - to:
        - podSelector:
            matchLabels:
              strimzi.io/broker-role: "true"
              strimzi.io/cluster: kafka
              strimzi.io/kind: Kafka
              strimzi.io/name: kafka-kafka
      ports:
        - protocol: TCP
          port: 9091
        - protocol: TCP
          port: 9092

    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
